// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payment products Callback it can get a payment product 1`] = `
Object {
  "body": Object {
    "accountsOnFile": Array [
      Object {
        "attributes": Array [
          Object {
            "key": "string",
            "mustWriteReason": "IN_THE_PAST",
            "status": "READ_ONLY",
            "value": "string",
          },
        ],
        "displayHints": Object {
          "labelTemplate": Array [
            Object {
              "attributeKey": "string",
              "mask": "string",
            },
          ],
          "logo": "string",
        },
        "id": -2147483648,
        "paymentProductId": 840,
      },
    ],
    "allowsRecurring": true,
    "allowsTokenization": true,
    "displayHints": Object {
      "displayOrder": -2147483648,
      "label": "string",
      "logo": "string",
    },
    "displayHintsList": Array [
      Object {
        "displayOrder": -2147483648,
        "label": "string",
        "logo": "string",
      },
    ],
    "fields": Array [
      Object {
        "dataRestrictions": Object {
          "isRequired": true,
          "validators": Object {
            "emailAddress": Object {},
            "expirationDate": Object {},
            "fixedList": Object {
              "allowedValues": Array [
                "string",
              ],
            },
            "iban": Object {},
            "length": Object {
              "maxLength": -2147483648,
              "minLength": -2147483648,
            },
            "luhn": Object {},
            "range": Object {
              "maxValue": -2147483648,
              "minValue": -2147483648,
            },
            "regularExpression": Object {
              "regularExpression": "string",
            },
            "termsAndConditions": Object {},
          },
        },
        "displayHints": Object {
          "alwaysShow": true,
          "displayOrder": -2147483648,
          "formElement": Object {
            "type": "string",
            "valueMapping": Array [
              Object {
                "displayElements": Array [
                  Object {
                    "id": "string",
                    "label": "string",
                    "type": "STRING",
                    "value": "string",
                  },
                ],
                "value": "string",
              },
            ],
          },
          "label": "string",
          "link": "string",
          "mask": "string",
          "obfuscate": true,
          "placeholderLabel": "string",
          "preferredInputType": "string",
          "tooltip": Object {
            "image": "string",
            "label": "string",
          },
        },
        "id": "string",
        "type": "string",
      },
    ],
    "id": -2147483648,
    "paymentMethod": "string",
    "paymentProduct302SpecificData": Object {
      "networks": Array [
        "string",
      ],
    },
    "paymentProduct320SpecificData": Object {
      "gateway": "string",
      "networks": Array [
        "string",
      ],
    },
    "paymentProductGroup": "string",
    "usesRedirectionTo3rdParty": true,
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Payment products Callback it can get a product directory 1`] = `
Object {
  "body": Object {
    "entries": Array [
      Object {
        "issuerId": "RABONL2U",
        "issuerList": "short",
        "issuerName": "Rabobank",
      },
    ],
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Payment products Callback it can get payment product networks 1`] = `
Object {
  "body": Object {
    "networks": Array [
      "string",
    ],
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Payment products Callback it can get payment products 1`] = `
Object {
  "body": Object {
    "paymentProducts": Array [
      Object {
        "accountsOnFile": Array [
          Object {
            "attributes": Array [
              Object {
                "key": "string",
                "mustWriteReason": "IN_THE_PAST",
                "status": "READ_ONLY",
                "value": "string",
              },
            ],
            "displayHints": Object {
              "labelTemplate": Array [
                Object {
                  "attributeKey": "string",
                  "mask": "string",
                },
              ],
              "logo": "string",
            },
            "id": -2147483648,
            "paymentProductId": 840,
          },
        ],
        "allowsRecurring": true,
        "allowsTokenization": true,
        "displayHints": Object {
          "displayOrder": -2147483648,
          "label": "string",
          "logo": "string",
        },
        "displayHintsList": Array [
          Object {
            "displayOrder": -2147483648,
            "label": "string",
            "logo": "string",
          },
        ],
        "fields": Array [
          Object {
            "dataRestrictions": Object {
              "isRequired": true,
              "validators": Object {
                "emailAddress": Object {},
                "expirationDate": Object {},
                "fixedList": Object {
                  "allowedValues": Array [
                    "string",
                  ],
                },
                "iban": Object {},
                "length": Object {
                  "maxLength": -2147483648,
                  "minLength": -2147483648,
                },
                "luhn": Object {},
                "range": Object {
                  "maxValue": -2147483648,
                  "minValue": -2147483648,
                },
                "regularExpression": Object {
                  "regularExpression": "string",
                },
                "termsAndConditions": Object {},
              },
            },
            "displayHints": Object {
              "alwaysShow": true,
              "displayOrder": -2147483648,
              "formElement": Object {
                "type": "string",
                "valueMapping": Array [
                  Object {
                    "displayElements": Array [
                      Object {
                        "id": "string",
                        "label": "string",
                        "type": "STRING",
                        "value": "string",
                      },
                    ],
                    "value": "string",
                  },
                ],
              },
              "label": "string",
              "link": "string",
              "mask": "string",
              "obfuscate": true,
              "placeholderLabel": "string",
              "preferredInputType": "string",
              "tooltip": Object {
                "image": "string",
                "label": "string",
              },
            },
            "id": "string",
            "type": "string",
          },
        ],
        "id": -2147483648,
        "paymentMethod": "string",
        "paymentProduct302SpecificData": Object {
          "networks": Array [
            "string",
          ],
        },
        "paymentProduct320SpecificData": Object {
          "gateway": "string",
          "networks": Array [
            "string",
          ],
        },
        "paymentProductGroup": "string",
        "usesRedirectionTo3rdParty": true,
      },
    ],
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Payment products Promises it can get a payment product 1`] = `
Object {
  "body": Object {
    "accountsOnFile": Array [
      Object {
        "attributes": Array [
          Object {
            "key": "string",
            "mustWriteReason": "IN_THE_PAST",
            "status": "READ_ONLY",
            "value": "string",
          },
        ],
        "displayHints": Object {
          "labelTemplate": Array [
            Object {
              "attributeKey": "string",
              "mask": "string",
            },
          ],
          "logo": "string",
        },
        "id": -2147483648,
        "paymentProductId": 840,
      },
    ],
    "allowsRecurring": true,
    "allowsTokenization": true,
    "displayHints": Object {
      "displayOrder": -2147483648,
      "label": "string",
      "logo": "string",
    },
    "displayHintsList": Array [
      Object {
        "displayOrder": -2147483648,
        "label": "string",
        "logo": "string",
      },
    ],
    "fields": Array [
      Object {
        "dataRestrictions": Object {
          "isRequired": true,
          "validators": Object {
            "emailAddress": Object {},
            "expirationDate": Object {},
            "fixedList": Object {
              "allowedValues": Array [
                "string",
              ],
            },
            "iban": Object {},
            "length": Object {
              "maxLength": -2147483648,
              "minLength": -2147483648,
            },
            "luhn": Object {},
            "range": Object {
              "maxValue": -2147483648,
              "minValue": -2147483648,
            },
            "regularExpression": Object {
              "regularExpression": "string",
            },
            "termsAndConditions": Object {},
          },
        },
        "displayHints": Object {
          "alwaysShow": true,
          "displayOrder": -2147483648,
          "formElement": Object {
            "type": "string",
            "valueMapping": Array [
              Object {
                "displayElements": Array [
                  Object {
                    "id": "string",
                    "label": "string",
                    "type": "STRING",
                    "value": "string",
                  },
                ],
                "value": "string",
              },
            ],
          },
          "label": "string",
          "link": "string",
          "mask": "string",
          "obfuscate": true,
          "placeholderLabel": "string",
          "preferredInputType": "string",
          "tooltip": Object {
            "image": "string",
            "label": "string",
          },
        },
        "id": "string",
        "type": "string",
      },
    ],
    "id": -2147483648,
    "paymentMethod": "string",
    "paymentProduct302SpecificData": Object {
      "networks": Array [
        "string",
      ],
    },
    "paymentProduct320SpecificData": Object {
      "gateway": "string",
      "networks": Array [
        "string",
      ],
    },
    "paymentProductGroup": "string",
    "usesRedirectionTo3rdParty": true,
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Payment products Promises it can get a product directory 1`] = `
Object {
  "body": Object {
    "entries": Array [
      Object {
        "issuerId": "RABONL2U",
        "issuerList": "short",
        "issuerName": "Rabobank",
      },
    ],
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Payment products Promises it can get payment product networks 1`] = `
Object {
  "body": Object {
    "networks": Array [
      "string",
    ],
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Payment products Promises it can get payment products 1`] = `
Object {
  "body": Object {
    "paymentProducts": Array [
      Object {
        "accountsOnFile": Array [
          Object {
            "attributes": Array [
              Object {
                "key": "string",
                "mustWriteReason": "IN_THE_PAST",
                "status": "READ_ONLY",
                "value": "string",
              },
            ],
            "displayHints": Object {
              "labelTemplate": Array [
                Object {
                  "attributeKey": "string",
                  "mask": "string",
                },
              ],
              "logo": "string",
            },
            "id": -2147483648,
            "paymentProductId": 840,
          },
        ],
        "allowsRecurring": true,
        "allowsTokenization": true,
        "displayHints": Object {
          "displayOrder": -2147483648,
          "label": "string",
          "logo": "string",
        },
        "displayHintsList": Array [
          Object {
            "displayOrder": -2147483648,
            "label": "string",
            "logo": "string",
          },
        ],
        "fields": Array [
          Object {
            "dataRestrictions": Object {
              "isRequired": true,
              "validators": Object {
                "emailAddress": Object {},
                "expirationDate": Object {},
                "fixedList": Object {
                  "allowedValues": Array [
                    "string",
                  ],
                },
                "iban": Object {},
                "length": Object {
                  "maxLength": -2147483648,
                  "minLength": -2147483648,
                },
                "luhn": Object {},
                "range": Object {
                  "maxValue": -2147483648,
                  "minValue": -2147483648,
                },
                "regularExpression": Object {
                  "regularExpression": "string",
                },
                "termsAndConditions": Object {},
              },
            },
            "displayHints": Object {
              "alwaysShow": true,
              "displayOrder": -2147483648,
              "formElement": Object {
                "type": "string",
                "valueMapping": Array [
                  Object {
                    "displayElements": Array [
                      Object {
                        "id": "string",
                        "label": "string",
                        "type": "STRING",
                        "value": "string",
                      },
                    ],
                    "value": "string",
                  },
                ],
              },
              "label": "string",
              "link": "string",
              "mask": "string",
              "obfuscate": true,
              "placeholderLabel": "string",
              "preferredInputType": "string",
              "tooltip": Object {
                "image": "string",
                "label": "string",
              },
            },
            "id": "string",
            "type": "string",
          },
        ],
        "id": -2147483648,
        "paymentMethod": "string",
        "paymentProduct302SpecificData": Object {
          "networks": Array [
            "string",
          ],
        },
        "paymentProduct320SpecificData": Object {
          "gateway": "string",
          "networks": Array [
            "string",
          ],
        },
        "paymentProductGroup": "string",
        "usesRedirectionTo3rdParty": true,
      },
    ],
  },
  "isSuccess": true,
  "status": 200,
}
`;
